--- a/loader/templates/post_uploaded.html
+++ b/loader/templates/post_uploaded.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Пост добавлен</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 <main>
 
-    <a href="/" class="link">Назад</a>
+    <a href="/static" class="link">Назад</a>
 
     <h1>Пост добавлен! </h1>
 
